Removed hard-coded password (generating Basic Auth instead if not configured for the API)